<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/candidate_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/candidate_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/john_doe"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="#B3D8E8"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/candidate_level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/president"
        android:textColor="#81D1EB" />

    <TextView
        android:id="@+id/candidate_bio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:text="I am a 200l student with passion for photography and nature. I have put effort in building my writing skills in the past years and i hope i am being chosen as your secretary. Please vote for me guys!" />

    <Button
        android:id="@+id/approve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/approve"
        android:textAllCaps="false" />

</LinearLayout>